@@ -875,51 +875,58 @@ local gcv_object_t* test_framepointer_arg (void)
   return uTheFramepointer(arg);
 }
 
-LISPFUNN(frame_up_1,2)
-{ /* (SYS::FRAME-UP-1 framepointer mode)
-     returns the frame-pointer increased by 1. */
-  var climb_fun_t frame_up_x = test_mode_arg(&frame_up_table[0]);
+/* climb once, according to table
+ > STACK_0: mode
+ > STACK_1: frame pointer
+ < value1: new frame pointer
+ removes 2 elements from STACK
+ can trigger GC */
+local maygc Values climb_stack_once (const climb_fun_t* table) {
+  var climb_fun_t climber = test_mode_arg(table);
   var gcv_object_t* stackptr = test_framepointer_arg();
-  stackptr = (*frame_up_x)(stackptr); /* climb up once */
+  stackptr = (*climber)(stackptr); /* climb once */
   VALUES1(make_framepointer(stackptr));
 }
 
-LISPFUNN(frame_up,2)
-{ /* (SYS::FRAME-UP framepointer mode) returns the frame-pointer at the top. */
-  var climb_fun_t frame_up_x = test_mode_arg(&frame_up_table[0]);
+/* climb as far as possible, according to table
+ > STACK_0: mode
+ > STACK_1: frame pointer
+ < value1: new frame pointer
+ removes 2 elements from STACK
+ can trigger GC*/
+local maygc Values climb_stack_repeat (const climb_fun_t* table) {
+  var climb_fun_t climber = test_mode_arg(table);
   var gcv_object_t* stackptr = test_framepointer_arg();
-  /* climb up as high as possible: */
-  while (1) {
-    var gcv_object_t* next_stackptr = (*frame_up_x)(stackptr);
+  while (1) { /* climb as far as possible: */
+    var gcv_object_t* next_stackptr = (*climber)(stackptr);
     if (next_stackptr == stackptr)
       break;
     stackptr = next_stackptr;
   }
   VALUES1(make_framepointer(stackptr));
+}
+
+LISPFUNN(frame_up_1,2)
+{ /* (SYS::FRAME-UP-1 framepointer mode)
+     returns the frame-pointer increased by 1. */
+  climb_stack_once(frame_up_table);
+}
+
+LISPFUNN(frame_up,2)
+{ /* (SYS::FRAME-UP framepointer mode) returns the frame-pointer at the top. */
+  climb_stack_repeat(frame_up_table);
 }
 
 LISPFUNN(frame_down_1,2)
 { /* (SYS::FRAME-DOWN-1 framepointer mode)
      returns the frame-pointer 1 below. */
-  var climb_fun_t frame_down_x = test_mode_arg(&frame_down_table[0]);
-  var gcv_object_t* stackptr = test_framepointer_arg();
-  stackptr = (*frame_down_x)(stackptr); /* climb down once */
-  VALUES1(make_framepointer(stackptr));
+  climb_stack_once(frame_down_table);
 }
 
 LISPFUNN(frame_down,2)
 { /* (SYS::FRAME-DOWN framepointer mode)
      returns the frame-pointer at the bottom. */
-  var climb_fun_t frame_down_x = test_mode_arg(&frame_down_table[0]);
-  var gcv_object_t* stackptr = test_framepointer_arg();
-  /* climb down as low as possible: */
-  while (1) {
-    var gcv_object_t* next_stackptr = (*frame_down_x)(stackptr);
-    if (next_stackptr == stackptr)
-      break;
-    stackptr = next_stackptr;
-  }
-  VALUES1(make_framepointer(stackptr));
+  climb_stack_repeat(frame_down_table);
 }
 
 LISPFUNN(the_frame,0)
